--- a/frontend/ios/frontend/Info.plist
+++ b/frontend/ios/frontend/Info.plist
@@ -72,6 +72,15 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>NotoSansCJKkr-Black.ttf</string>
+		<string>NotoSansCJKkr-Bold.ttf</string>
+		<string>NotoSansCJKkr-DemiLight.ttf</string>
+		<string>NotoSansCJKkr-Light.ttf</string>
+		<string>NotoSansCJKkr-Medium.ttf</string>
+		<string>NotoSansCJKkr-Regular.ttf</string>
+		<string>NotoSansCJKkr-Thin.ttf</string>
+		<string>NotoSansMonoCJKkr-Bold.ttf</string>
+		<string>NotoSansMonoCJKkr-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
