--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-modal": "^11.10.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
