--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "1.9.7",
+    "@reduxjs/toolkit": "^1.5.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
