--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "react-native-camera-kit": "^11.1.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
-    "react-native-screens": "^3.1.1",
+    "react-native-screens": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
