--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,15 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "rndebugger-open"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -35,6 +37,7 @@
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.65.2",
+    "react-native-debugger-open": "^0.3.25",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
