--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-camera": "^3.43.6",
     "react-native-camera-kit": "^11.1.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
