Add S04P31D101-13 리덕스 작성

--- a/backend/SSG/src/main/resources/application.properties
+++ b/backend/SSG/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
