--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -71,7 +71,7 @@ pipeline {
 				// sh 'docker run -d --name <front-image-name> -p 80:80 <front-image-name>:latest'
 				sh 'docker run -d --name backend_image -p 9000:9000 backend_image:latest'
 				//sh 'docker run -d --name backend_image -v /volumes/back_home/profile:\
-				/volumes/profile backend_image -p 9000'
+				///volumes/profile backend_image -p 9000'
 			}
 		}
 	}
