--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,7 +38,12 @@ pipeline {
 			steps {
 				sh 'docker ps -f name=backend_image -q | xargs --no-run-if-empty \
 				docker container stop'
+				sh 'docker ps -f name=mysql_db -q | xargs --no-run-if-empty \
+				docker container stop'
+				
 				sh 'docker container ls -a name=backend_image -q | xargs -r docker \
+				container rm'
+				sh 'docker container ls -a name=mysql_db -q | xargs -r docker \
 				container rm'
 				
 				sh 'docker ps -a -f "status=created" -f "status=exited" -q | xargs \
@@ -70,6 +75,12 @@ pipeline {
 				// docker container 실행
 				// sh 'docker run -d --name <front-image-name> -p 80:80 <front-image-name>:latest'
 				sh 'docker run -d --name backend_image -p 9000:9000 backend_image:latest'
+				sh 'docker run --detach --env MYSQL_ROOT_PASSWORD="root" \
+				-- env MYSQL_USER="ssafy" \
+				-- env MYSQL_PASSWORD="ssafy" \
+				-- env MYSQL_DATABASE="ssg" \
+				-- name "mysql_db" \
+				--publish 3306:3306 mysql'
 				//sh 'docker run -d --name backend_image -v /volumes/back_home/profile:\
 				///volumes/profile backend_image -p 9000'
 			}
