--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -41,10 +41,10 @@ pipeline {
 				sh 'docker ps -f name=mysql_db -q | xargs --no-run-if-empty \
 				docker container stop'
 				
-				sh 'docker container ls -a name=backend_image -q | xargs -r docker \
-				container rm'
-				sh 'docker container ls -a name=mysql_db -q | xargs -r docker \
-				container rm'
+				//sh 'docker container ls -a name=backend_image -q | xargs -r docker \
+				//container rm'
+				//sh 'docker container ls -a name=mysql_db -q | xargs -r docker \
+				//container rm'
 				
 				sh 'docker ps -a -f "status=created" -f "status=exited" -q | xargs \
 				-r docker container rm'
