--- a/backend/SSG/Dockerfile
+++ b/backend/SSG/Dockerfile
@@ -4,7 +4,7 @@ COPY mvnw .
 COPY mvnw.cmd .
 COPY pom.xml .
 COPY src src
-RUN mvn clean package
+RUN mvn package
 
 FROM openjdk:8-jdk-alpine
 COPY --from=builder target/*.jar app.jar
