--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -74,13 +74,13 @@ pipeline {
 				//| xargs -r docker rmi'
 				// docker container 실행
 				// sh 'docker run -d --name <front-image-name> -p 80:80 <front-image-name>:latest'
-				sh 'docker run -d --name backend_image -p 9000:9000 backend_image:latest'
+				sh 'docker run -d --name backend_image -p 9000:9000 backend_image:latest --network ServerToDB'
 				sh 'docker run --detach --env MYSQL_ROOT_PASSWORD="root" \
 				--env MYSQL_USER="ssafy" \
 				--env MYSQL_PASSWORD="ssafy" \
 				--env MYSQL_DATABASE="ssg" \
 				--name "mysql_db" \
-				--publish 3306:3306 mysql'
+				--publish 3306:3306 mysql --network ServerToDB'
 				//sh 'docker run -d --name backend_image -v /volumes/back_home/profile:\
 				///volumes/profile backend_image -p 9000'
 			}
