--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "postinstall": "npx patch-package"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
