--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.21.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
@@ -30,7 +31,6 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
-    "react-native-sha-hash": "^1.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5"
