--- a/frontend/ios/Podfile
+++ b/frontend/ios/Podfile
@@ -16,6 +16,8 @@ target 'frontend' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-shake', :path => '../node_modules/react-native-shake'
+
   target 'frontendTests' do
     inherit! :complete
     # Pods for testing
