--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,11 @@
     "react-native-camera-kit": "^11.1.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-global-props": "^1.1.5",
     "react-native-modal": "^11.10.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-shake": "^3.5.2",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
