--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.21.1",
+    "moment": "^2.29.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
