--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "postinstall": "npx patch-package"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.15.0",
