--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,8 +36,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
-    "styled-components": "^5.2.3"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
