--- a/backend/SSG/src/main/resources/application.properties
+++ b/backend/SSG/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=jdbc:mysql://k4d101.p.ssafy.io:3306/ssg?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://localhost:3306/ssg?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://k4d101.p.ssafy.io:3306/ssg?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+# spring.datasource.url=jdbc:mysql://localhost:3306/ssg?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
