Update S04P31D101-155 메인페이지 UI 구현

--- a/frontend/ios/Podfile
+++ b/frontend/ios/Podfile
@@ -18,6 +18,8 @@ target 'frontend' do
 
   pod 'react-native-shake', :path => '../node_modules/react-native-shake'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'frontendTests' do
     inherit! :complete
     # Pods for testing
