--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-swiper-flatlist": "^3.0.14",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.4.4",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5"
   },
