--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -9,11 +9,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "css-loader": "^4.3.0",
+    "date-fns": "^2.0.0-beta.5",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "style-loader": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
