--- a/frontend_admin/nginx/admin.conf
+++ b/frontend_admin/nginx/admin.conf
@@ -19,8 +19,8 @@
 # Default server configuration
 #
 server {
-	listen 3000 default_server;
-	listen [::]:3000 default_server;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
 	# SSL configuration
 	#
@@ -52,7 +52,7 @@ server {
 	}
 
 	location /ssg {
-		proxy_pass http://k4d101.p.ssafy.io:9000;
+		proxy_pass http://localhost:9000;
 		proxy_http_version 1.1;
 		proxy_set_header Connection "";
 
