--- a/frontend_admin/Dockerfile
+++ b/frontend_admin/Dockerfile
@@ -9,6 +9,6 @@ FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx/admin.conf /etc/nginx/conf.d/admin.conf
 
-COPY --from=build-stage ./build /usr/share/nginx/html/admin
-EXPOSE 3000
+COPY --from=build-stage ./build /usr/share/nginx/html
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
