--- a/frontend_admin/Dockerfile
+++ b/frontend_admin/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:lts-alpine as build-stage
 COPY package*.json ./
 
-RUN yarn install
+RUN npm install
 COPY . .
-RUN yarn build
+RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx/default /etc/nginx/sites-enabled/default
 
-COPY --from=build-stage ./build /usr/share/nginx/html
+COPY --from=build-stage ./dist /usr/share/nginx/html
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
