--- a/frontend_admin/Dockerfile
+++ b/frontend_admin/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:lts-alpine as build-stage
+WORKDIR /app
 COPY package*.json ./
 
 RUN npm install
@@ -9,6 +10,5 @@ FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx/default /etc/nginx/sites-enabled/default
 
-COPY --from=build-stage ./dist /usr/share/nginx/html
-EXPOSE 3000
+COPY --from=build-stage ./app/dist /usr/share/nginx/html/admin
 CMD ["nginx", "-g", "daemon off;"]
