--- a/frontend_admin/Dockerfile
+++ b/frontend_admin/Dockerfile
@@ -1,5 +1,4 @@
 FROM node:lts-alpine as build-stage
-WORKDIR /app
 COPY package*.json ./
 
 RUN npm install
@@ -10,5 +9,5 @@ FROM nginx:stable-alpine as production-stage
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx/default /etc/nginx/sites-enabled/default
 
-COPY --from=build-stage ./app/dist /usr/share/nginx/html/admin
+COPY --from=build-stage ./build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
