--- a/frontend_admin/nginx/admin.conf
+++ b/frontend_admin/nginx/admin.conf
@@ -21,7 +21,7 @@ server {
 	}
 
 	location /ssg {
-		proxy_pass http://localhost:9000;
+		proxy_pass http://backend_image:9000;
 		proxy_http_version 1.1;
 		proxy_set_header Connection "";
 
